add : 007 - 5강. 사칙연산 계산기의 나눗템 테스트 작성

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,8 @@ library-app-kotlin/.gradle
 library-app-kotlin/build
 library-app-kotlin/out
 
+study-library-app/.gradle
+study-library-app/build
+study-library-app/out
+
 .idea
